Fix moobile navbar alignment issues

--- a/web/styles.css
+++ b/web/styles.css
@@ -272,6 +272,10 @@ nav {
     transition: all 0.3s;
   }
 
+  #clock {
+    width: fit-content;
+  }
+
   header {
     margin-left: 0.65rem;
     margin-right: 0.65rem;
@@ -304,10 +308,11 @@ nav {
     outline: none;
     padding: 0;
     position: absolute;
+    transform: translateY(50%);
+    right: 0;
     transition: all 0.3s;
     visibility: hidden;
     width: 100%;
-    transform: translateY(50%);
   }
 
   #nav-items.active {
